# cso-demo

./: Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
cso-core/: Cargo.toml
cso-core/src/: cost.rs  expression.rs  lib.rs  memo.rs  operator.rs  property.rs  rule.rs
cso-core/src/metadata/: accessor.rs  mod.rs  provider.rs  statistics.rs
cso-core/src/task/: apply_rule.rs  derive_stats.rs  enforce_and_cost.rs  explore_group.rs  mod.rs  optimize_group.rs  optimize_plan.rs
src/: any.rs  cost.rs  datum.rs  expression.rs  lib.rs  memo.rs  metadata.rs  rule.rs  statistics.rs  task.rs
src/cost/: mod.rs
src/expression/: cmp.rs  const.rs  is_null.rs  logical.rs  mod.rs  var.rs
src/metadata/: md_accessor.rs  md_provider.rs  mod.rs  statistics.rs
src/operator/: logical_filter.rs  logical_index_scan.rs  logical_project.rs  logical_scan.rs  mod.rs  physical_filter.rs  physical_index_scan.rs  physical_project.rs  physical_scan.rs  physical_sort.rs  physical_topn.rs
src/operators/: logical_scan.rs  mod.rs
src/property/: mod.rs  sort_property.rs
src/rule/: mod.rs
src/rule/exploration/: filter_2_index_scan.rs  mod.rs
src/rule/implementation/: filter.rs  index_scan.rs  mod.rs  project.rs  scan.rs
src/task/: apply_rule.rs  derive_stats.rs  enforce_and_cost.rs  explore_group.rs  mod.rs  optimize_group.rs  optimize_plan.rs
tests/: indexscan.rs  indexscan_1.rs  indexscan_2.rs  metadata.rs  metadata_serialize.rs  opt.rs  sort_project_filter_scan.rs  sort_project_indexscan.rs
