[package]
name = "cso-demo"
version = "0.1.0"
edition = "2021"
authors = ["Nothing New Labs <davidli2010@foxmail.com>"]
description = "A cascade style optimizer"
readme = "README.md"
license = "Apache-2.0"
keywords = ["SQL", "optimizer", "CBO", "cascade"]
repository = "https://github.com/nothing-new-labs/cso-demo.git"
publish = false

[dependencies]
bit-set = "0.5.3"
dyn-clonable = "0.9.0"

serde = { version = "1.0.179", features = ["derive"]}
serde_json = "1.0.104"
typetag = "0.2.13"
serde_json_any_key = "2.0.0"
