[package]
name = "cso-core"
version = "0.1.0"
edition = "2021"
authors = ["Nothing New Labs <davidli2010@foxmail.com>"]
description = "The core framework of cascade style optimizer"
readme = "README.md"
license = "Apache-2.0"
keywords = ["SQL", "optimizer", "CBO", "cascade"]
repository = "https://github.com/nothing-new-labs/cso-demo.git"
publish = false

[dependencies]
dyn-clonable = "0.9.0"
